[gd_scene load_steps=22 format=3 uid="uid://dtjpof14r0bcb"]

[ext_resource type="Script" path="res://world.gd" id="1_2rb77"]
[ext_resource type="Script" path="res://game.gd" id="1_acbsa"]
[ext_resource type="Script" path="res://camera_2d.gd" id="1_bwmuh"]
[ext_resource type="Script" path="res://game_state.gd" id="2_8uhg5"]
[ext_resource type="Script" path="res://gui.gd" id="2_n34sk"]
[ext_resource type="Texture2D" uid="uid://cfnlugthi7dgl" path="res://tile_cursor.png" id="4_0fr7v"]
[ext_resource type="Script" path="res://AI/hivemind.gd" id="4_g3tpu"]
[ext_resource type="Script" path="res://factory.gd" id="5_8o8h7"]
[ext_resource type="Texture2D" uid="uid://6ybn737h53wy" path="res://blocked_cursor.png" id="7_6qi8k"]
[ext_resource type="Texture2D" uid="uid://btx6pcq8h7lqt" path="res://hubs/beer_hub/beer_hub1.png" id="7_g58se"]
[ext_resource type="Script" path="res://building_cursor.gd" id="7_sp6ne"]
[ext_resource type="Texture2D" uid="uid://c37wje6ikep2c" path="res://hubs/beer_hub/beer_hub2.png" id="8_gqlsa"]
[ext_resource type="Texture2D" uid="uid://c8l0t3mbc4atn" path="res://hubs/energy_hub/energy_hub1.png" id="9_ssxo7"]
[ext_resource type="Texture2D" uid="uid://il6pnwplvdy" path="res://hubs/energy_hub/energy_hub2.png" id="10_62d0k"]
[ext_resource type="Texture2D" uid="uid://dtnmcje85qhw" path="res://hubs/food_hub/food_hub1.png" id="11_ag38c"]
[ext_resource type="Texture2D" uid="uid://d30syauf7qb6t" path="res://hubs/food_hub/food_hub2.png" id="12_avoce"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_55trl"]
texture = ExtResource("7_6qi8k")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_orqen"]
sources/0 = SubResource("TileSetAtlasSource_55trl")

[sub_resource type="SpriteFrames" id="SpriteFrames_fnxof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_g58se")
}, {
"duration": 1.0,
"texture": ExtResource("8_gqlsa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_byq5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ssxo7")
}, {
"duration": 1.0,
"texture": ExtResource("10_62d0k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hlmuf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ag38c")
}, {
"duration": 1.0,
"texture": ExtResource("12_avoce")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_acbsa")

[node name="GUI" type="CanvasLayer" parent="."]
process_priority = 1
script = ExtResource("2_n34sk")

[node name="VFlowContainer" type="VFlowContainer" parent="GUI"]
offset_right = 158.0
offset_bottom = 329.0

[node name="SpawnDwarfButton" type="Button" parent="GUI/VFlowContainer"]
layout_mode = 2
text = "Spawn Dawrf"

[node name="SpawnEnergyHubButton" type="Button" parent="GUI/VFlowContainer"]
layout_mode = 2
text = "Spawn Energy Hub"

[node name="LevelLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="DirtLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="IronLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="CopperLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="WealthLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="MicelLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="WaterLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="DwarfLabel" type="Label" parent="GUI/VFlowContainer"]
layout_mode = 2

[node name="GameState" type="Node" parent="."]
script = ExtResource("2_8uhg5")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_bwmuh")

[node name="World" type="Node2D" parent="."]
texture_filter = 1
script = ExtResource("1_2rb77")
is_generating_fog_of_war = false

[node name="TileCursor" type="Sprite2D" parent="World"]
visible = false
z_index = 1000
y_sort_enabled = true
texture = ExtResource("4_0fr7v")

[node name="BuildingCursor" type="Node2D" parent="World"]
visible = false
z_index = 1000
script = ExtResource("7_sp6ne")

[node name="IndicatorMap" type="TileMap" parent="World/BuildingCursor"]
tile_set = SubResource("TileSet_orqen")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 65538, 0, 0, 65537, 0, 0, 65536, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0)

[node name="Blueprint_beer" type="AnimatedSprite2D" parent="World/BuildingCursor"]
visible = false
modulate = Color(1, 1, 1, 0.498039)
z_index = 1
position = Vector2(23, 18)
sprite_frames = SubResource("SpriteFrames_fnxof")

[node name="Blueprint_energy" type="AnimatedSprite2D" parent="World/BuildingCursor"]
visible = false
modulate = Color(1, 1, 1, 0.498039)
z_index = 1
position = Vector2(24, 22)
sprite_frames = SubResource("SpriteFrames_byq5e")

[node name="Blueprint_food" type="AnimatedSprite2D" parent="World/BuildingCursor"]
visible = false
modulate = Color(1, 1, 1, 0.498039)
z_index = 1
position = Vector2(23, 24)
sprite_frames = SubResource("SpriteFrames_hlmuf")

[node name="Factory" type="Node2D" parent="."]
script = ExtResource("5_8o8h7")

[node name="AI" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_g3tpu")

[connection signal="pressed" from="GUI/VFlowContainer/SpawnDwarfButton" to="GUI" method="_on_spawn_dwarf_button_pressed"]
[connection signal="pressed" from="GUI/VFlowContainer/SpawnEnergyHubButton" to="GUI" method="_on_spawn_energy_hub_button_pressed"]
